fix(component): alignment fixes for the GlobalNavigation and ContainerNavigation
affects: @atlaskit/navigation

this brings Navigation closer to v1.3 of the spec

--- a/packages/navigation/src/components/less/Drawer.less
+++ b/packages/navigation/src/components/less/Drawer.less
@@ -49,7 +49,7 @@
   display: flex;
   flex-direction: column;
   flex: 1 0 auto; 
-  padding: @global-vertical-padding 0;
+  padding: @global-vertical-padding-top 0 @ak-grid-size * 2 0;
   width: @global-open-width;
 
   .icon {
@@ -71,7 +71,7 @@
   flex-direction: column;
   height: 100%;
   overflow-y: auto;
-  padding: @ak-grid-size @ak-grid-size 0 @ak-grid-size;
+  padding: (@ak-grid-size * 2) @ak-grid-size 0 @ak-grid-size;
   position: relative;
   width: 100%;
 }
