--- a/packages/navigation/src/components/less/NavigationItem.less
+++ b/packages/navigation/src/components/less/NavigationItem.less
@@ -6,7 +6,7 @@
 
 @icon-size: @ak-grid-size * 3;
 @icon-offset-left: @ak-grid-size * 3.5;
-@icon-open-padding: 0 (@ak-grid-size * 3) 0 (@icon-offset-left - @ak-grid-size * 2);
+@icon-open-padding: 0 (@ak-grid-size * 2) 0 (@icon-offset-left - @ak-grid-size * 2);
 @icon-closed-horizontal-padding: (@container-closed-width - (@ak-grid-size * 4) - @icon-size) / 2;
 @icon-closed-padding: 0 @icon-closed-horizontal-padding 0 @icon-closed-horizontal-padding;
 @sub-text-size: unit(12px / @ak-font-size-default, em);
